add pep8 testing

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 -e git+https://github.com/django/django.git@1.7a2#egg=Django-dev
 django-authtools==0.2.1
 django-backupdb==0.5.5
+django-test-pep8==0.1
