--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ django-authtools==0.2.1
 django-backupdb==0.5.5
 django-test-pep8==0.1
 factory-boy==2.3.1
+mock==1.0.1
+django-dotenv==1.2
+django-betterforms==0.1.3
+django-emailtools==0.2.1
