--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ mock==1.0.1
 django-dotenv==1.2
 django-betterforms==0.1.3
 django-emailtools==0.2.1
+django-herokuify==1.0.pre3
+pylibmc==1.2.3
+gunicorn==18.0
+psycopg2==2.5.2
