--- a/.env_defaults
+++ b/.env_defaults
@@ -1,1 +1,1 @@
-DJANGO_SECRET_KEY='s&vgm$yb$ap8&^!rpn^rq1o086658b0hfkxkccq%(%_%u$euhr'
+DJANGO_SECRET_KEY='this-is-not-a-real-secret-key-do-not-use-me'
