--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,20 @@
 language: python
 python:
   - "2.7"
-install: pip install -r requirements.txt
-script: "python manage.py test"
+env:
+  global:
+    - PIP_DOWNLOAD_CACHE=$HOME/.pip_cache
+    - DJANGO_SECRET_KEY="not-a-real-key"
+  matrix:
+    - TOX_ENV=py27-django17
+    - TOX_ENV=flake8
+cache:
+  directories:
+    - $HOME/.pip-cache/
+install:
+  - "travis_retry pip install setuptools --upgrade"
+  - "pip install tox"
+script:
+  - tox -e $TOX_ENV
+after_script:
+  - cat .tox/$TOX_ENV/log/*.log
