update tox to test building the docs

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist=
     py27-django17,
-    flake8
+    flake8,
+    sphinx
 skipsdist=True
 
 [base]
@@ -13,18 +14,27 @@ max-line-length= 100
 exclude= **/tests/*,**/migrations/*,.tox/*
 
 [testenv]
+basepython=python2.7
 commands=py.test -n 4 --tb native {posargs}
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
     DJANGO_SECRET_KEY=not-a-real-secret-key
 
 [testenv:py27-django17]
-basepython=python2.7
 deps=
     {[base]deps}
 
 
 [testenv:flake8]
-basepython=python
 deps=flake8
 commands=flake8 {toxinidir}
+
+[testenv:sphinx]
+deps=
+    -r{toxinidir}/requirements-docs.txt
+whitelist_externals=
+    make
+    cd
+commands=
+    cd {envdir}/docs
+    make html
