update flake8 ignores

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps =
 
 [flake8]
 max-line-length= 100
-exclude= **/tests/*,**/migrations/*,.tox/*
+exclude= **/tests/*,**/migrations/*,.tox/*,docs/*
 
 [testenv]
 basepython=python2.7
