fix tox sphinx build

--- a/tox.ini
+++ b/tox.ini
@@ -32,8 +32,5 @@ commands=flake8 {toxinidir}
 [testenv:sphinx]
 deps=
     -r{toxinidir}/requirements-docs.txt
-whitelist_externals=
-    make
-    cd
 commands=
-    cd {toxinidir}/docs && make html
+    sphinx-build -b html -d {envdir}/_build/doctrees -c {toxinidir}/docs {toxinidir}/docs {envdir}/_build/html
