--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ django-emailtools==0.2.1
 django-herokuify==1.0.pre3
 pylibmc==1.2.3
 gunicorn==18.0
-psycopg2==2.5.2
+#psycopg2==2.5.2
 djangorestframework==2.4.0
 django-compressor==1.3
 PyYAML==3.11
