Bring app into the modern world

--- a/.env_defaults
+++ b/.env_defaults
@@ -1,2 +1,4 @@
 DJANGO_SECRET_KEY='this-is-not-a-real-secret-key-do-not-use-me'
 REGISTRATION_OPEN='True'
+DJANGO_DEBUG='True'
+DATABASE_URL='sqlite:///db.sqlite3'
