--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
 Django>=1.7.0,<1.8
+PyYAML==3.11
 django-authtools==0.2.1
 django-backupdb==0.5.5
-django-test-pep8==0.1
-factory-boy==2.3.1
-pytz==2013.9
-mock==1.0.1
-django-dotenv==1.2
 django-betterforms==0.1.3
+django-compressor==1.3
 django-emailtools==0.2.1
 django-herokuify==1.0.pre3
-pylibmc==1.2.3
+djangorestframework==3.0.2
+env-excavator==1.2.0
 gunicorn==18.0
-#psycopg2==2.5.2
-djangorestframework==2.4.0
-django-compressor==1.3
-PyYAML==3.11
-newrelic==2.18.1.15
-raven==4.1.1
 ipython==1.2.1
+newrelic==2.18.1.15
+psycopg2==2.5.4
+pylibmc==1.4.1
+pytz==2014.10
+raven==5.1.1
