--- a/tox.ini
+++ b/tox.ini
@@ -7,13 +7,14 @@ skipsdist=True
 [base]
 deps =
     -r{toxinidir}/requirements-dev.txt
+    -r{toxinidir}/requirements.txt
 
 [flake8]
 max-line-length= 100
 exclude= **/tests/*,**/migrations/*,.tox/*
 
 [testenv]
-commands=py.test -n 4 --tb native {posargs}
+commands=py.test {posargs}
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
     DJANGO_SECRET_KEY=not-a-real-secret-key
