Add build process to client

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ venv
 voldb.iml
 .env
 .tox
+
+# Client build files
+client/node_modules
+*/npm-debug.log
+client/node_modules
+client/dist
+client/.tmp
+client/.sass-cache
+client/bower_components
+client/test/bower_components
