--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "time-grunt": "^0.4.0",
     "grunt-bower-requirejs": "~0.7.0",
     "grunt-contrib-requirejs": "~0.4.0",
-    "grunt-wiredep": "~2.0.0"
+    "grunt-wiredep": "~2.0.0",
+    "sass": "~0.5.0"
   },
   "engines": {
     "node": ">=0.10.0"
