--- a/.env_defaults
+++ b/.env_defaults
@@ -1,2 +1,7 @@
 DJANGO_SECRET_KEY='this-is-not-a-real-secret-key-do-not-use-me'
+DJANGO_EMAIL_BACKEND='django.core.mail.backends.console.EmailBackend'
+DJANGO_ALLOWED_HOSTS='localhost:8000'
+DJANGO_DEBUG='True'
+DJANGO_STATIC_ROOT='volunteer/public/static/'
+DJANGO_MEDIA_ROOT='volunteer/public/media/'
 REGISTRATION_OPEN='True'
