--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ max-line-length= 100
 exclude= **/tests/*,**/migrations/*,.tox/*
 
 [testenv]
-commands=py.test -n 4 --tb native {posargs}
+commands=py.test {posargs:tests}
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
     DJANGO_SECRET_KEY=not-a-real-secret-key
