--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
 Django>=1.7.0,<1.8
+PyYAML==3.11
+dj-database-url==0.3.0
 django-authtools==0.2.1
 django-backupdb==0.5.5
-django-test-pep8==0.1
-factory-boy==2.3.1
-pytz==2013.9
-mock==1.0.1
-django-dotenv==1.2
 django-betterforms==0.1.3
+django-cache-url==0.8.0
+django-dotenv==1.2
 django-emailtools==0.2.1
 django-herokuify==1.0.pre3
-pylibmc==1.2.3
-gunicorn==18.0
-#psycopg2==2.5.2
+django-pipeline==1.4.6
+django-s3-folder-storage==0.2
 djangorestframework==2.4.0
-django-compressor==1.3
-PyYAML==3.11
-newrelic==2.18.1.15
-raven==4.1.1
+env-excavator==1.2.0
+gunicorn==18.0
 ipython==1.2.1
+newrelic==2.18.1.15
+psycopg2==2.5.2
+pylibmc==1.2.3
+pytz==2013.9
+raven==4.1.1
