--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,9 @@
 -r requirements.txt
+WebTest==2.0.16
+django-webtest==1.7.7
+factory-boy==2.4.1
 mock==1.0.1
-tox==1.8.0
-pytest==2.6.3
-pytest-django==2.7.0
+pytest-django==2.8.0
 pytest-xdist==1.11
-factory-boy==2.3.1
+pytest==2.6.4
+tox==1.9.0
