--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.3.0
 django-authtools==0.2.1
 django-backupdb==0.5.5
 django-betterforms==1.1.1
+django-bootstrap3==5.1.1
 django-cache-url==0.8.0
 django-dotenv==1.2
 django-emailtools==0.2.1
@@ -11,6 +12,7 @@ django-herokuify==1.0.pre3
 django-pipeline==1.4.6
 django-s3-folder-storage==0.2
 djangorestframework==2.4.0
+drf-ujson==1.1
 env-excavator==1.3.0
 gunicorn==18.0
 ipython==1.2.1
@@ -19,4 +21,3 @@ psycopg2==2.5.2
 pylibmc==1.2.3
 pytz==2013.9
 raven==4.1.1
-django-bootstrap3==5.1.1
