--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,12 @@
     "jshint-stylish": "^0.4.0",
     "load-grunt-tasks": "^0.4.0",
     "sass": "~0.5.0",
-    "time-grunt": "^0.4.0"
+    "time-grunt": "^0.4.0",
+    "grunt": "^0.4.5"
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
   }
 }
