--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
 envlist=
     py27-django17,
-    flake8
+    flake8,
+    jshint,
+    jasmine
 skipsdist=True
 
 [base]
@@ -28,3 +30,24 @@ deps=
 basepython=python
 deps=flake8
 commands=flake8 {toxinidir}
+
+[testenv:jshint]
+deps=
+whitelist_externals=
+    npm
+    jshint
+commands=
+    npm install jshint
+    jshint {toxinidir}/volunteer/static/js/shift-grid/
+
+[testenv:jasmine]
+basepython=python2.7
+changedir={toxinidir}/js_tests
+deps=
+    jasmine
+whitelist_externals=
+    npm
+    make
+commands=
+    npm install -g handlebars
+    make test
