--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ django-emailtools==0.2.1
 django-herokuify==1.0.pre3
 django-pipeline==1.4.7
 django-s3-folder-storage==0.2
+django-tables2==0.15.0
 djangorestframework==3.1.0
 drf-ujson==1.1
 env-excavator==1.3.0
 gunicorn==18.0
 ipython==1.2.1
+manifesto==0.5
 newrelic==2.18.1.15
 psycopg2==2.5.2
 pylibmc==1.2.3
@@ -24,4 +26,3 @@ python-dotenv==0.1.0
 pytz==2013.9
 raven==4.1.1
 readline==6.2.4.1
-manifesto==0.5
