--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
 
 [flake8]
 max-line-length= 100
-exclude= **/tests/*,**/migrations/*,.tox/*
+exclude= **/tests/*,**/migrations/*,.tox/*,tmp/*
 
 [testenv]
 commands=py.test {posargs:tests}
