--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-compressor==1.3
 django-emailtools==0.2.1
 django-herokuify==1.0.pre3
 django-pipeline==1.4.7
+django-pylibmc==0.5.0
 django-pylibmc-sasl==0.2.4
 django-s3-folder-storage==0.2
 django-tables2==0.15.0
