--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
     - DJANGO_SECRET_KEY="not-a-real-key"
   matrix:
     - TOX_ENV=py27-django17
+    - TOX_ENV=py27-django18
+    #- TOX_ENV=py27-django19
     - TOX_ENV=flake8
     - TOX_ENV=jshint
     - TOX_ENV=jasmine
