--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,42 @@
 [tox]
 envlist=
     py27-django17,
+    py27-django18,
+    py27-django19,
     flake8,
     jshint,
     jasmine
 skipsdist=True
 
 [base]
-deps =
-    -r{toxinidir}/requirements-dev.txt
 
 [flake8]
 max-line-length= 100
 exclude= **/tests/*,**/migrations/*,.tox/*,tmp/*
 
 [testenv]
-commands=py.test {posargs:tests}
+basepython=python2.7
+commands=py.test
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
     DJANGO_SECRET_KEY=not-a-real-secret-key
+deps =
+    -r{toxinidir}/requirements-dev.txt
 
 [testenv:py27-django17]
-basepython=python2.7
-deps=
-    {[base]deps}
+commands=
+    pip install "Django>=1.7,<1.8"
+    {[testenv]commands}
 
+[testenv:py27-django18]
+commands=
+    pip install "Django>=1.8,<1.9"
+    {[testenv]commands}
+
+[testenv:py27-django19]
+commands=
+    pip install "Django>=1.9,<2.0"
+    {[testenv]commands}
 
 [testenv:flake8]
 basepython=python
