--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   matrix:
     - TOX_ENV=py27-django17
     - TOX_ENV=py27-django18
-    #- TOX_ENV=py27-django19
+    - TOX_ENV=py27-django19
     - TOX_ENV=flake8
     - TOX_ENV=jshint
     - TOX_ENV=jasmine
