update main requirements

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ commands=py.test
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
     DJANGO_SECRET_KEY=not-a-real-secret-key
+    DJANGO_ALLOWED_HOSTS=*
+    DATABASE_URL=sqlite://:memory:
 deps =
     -r{toxinidir}/requirements-dev.txt
 
