--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
 envlist=
-    py27-django17,
     py27-django18,
     py27-django19,
     flake8,
@@ -16,19 +15,20 @@ exclude= **/tests/*,**/migrations/*,.tox/*,tmp/*
 
 [testenv]
 basepython=python2.7
-commands=py.test
+commands=
+    env
+    py.test
+whitelist_externals=
+    env
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
     DJANGO_SECRET_KEY=not-a-real-secret-key
     DJANGO_ALLOWED_HOSTS=*
     DATABASE_URL=sqlite://:memory:
+    DJANGO_STATIC_ROOT='volunteer/public/static/'
+    DJANGO_MEDIA_ROOT='volunteer/public/media/'
 deps =
     -r{toxinidir}/requirements-dev.txt
-
-[testenv:py27-django17]
-commands=
-    pip install "Django>=1.7,<1.8"
-    {[testenv]commands}
 
 [testenv:py27-django18]
 commands=
