--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist=
     py27-django18,
-    py27-django19,
+    #py27-django19,
     flake8,
     jshint,
     jasmine
@@ -25,8 +25,8 @@ setenv=
     DJANGO_SECRET_KEY=not-a-real-secret-key
     DJANGO_ALLOWED_HOSTS=*
     DATABASE_URL=sqlite://:memory:
-    DJANGO_STATIC_ROOT='volunteer/public/static/'
-    DJANGO_MEDIA_ROOT='volunteer/public/media/'
+    DJANGO_STATIC_ROOT=volunteer/public/static/
+    DJANGO_MEDIA_ROOT=volunteer/public/media/
 deps =
     -r{toxinidir}/requirements-dev.txt
 
