--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist=
     #py27-django19,
     flake8,
     jshint,
-    jasmine
+    mocha
 skipsdist=True
 
 [base]
@@ -54,14 +54,18 @@ commands=
     npm install jshint
     jshint {toxinidir}/volunteer/static/js/shift-grid/
 
-[testenv:jasmine]
+[testenv:mocha]
 basepython=python2.7
 changedir={toxinidir}/js_tests
 deps=
-    jasmine
 whitelist_externals=
     npm
     make
+    bower
 commands=
     npm install -g handlebars
+    npm install -g bower
+    npm install -g mocha
+    npm install -g mocha-phantomjs
+    bower install {toxinidir}/bower.json
     make test
