--- a/js_tests/Makefile
+++ b/js_tests/Makefile
@@ -1,25 +1,21 @@
 .PHONY: test compile-handlebars jasmine-ci jasmine-browser lint
 
-JS_TEST_BROWSER?=phantomjs
-
 help:
-	@echo "test - run the jasmine test suite"
+	@echo "test - run the mocha test suite"
 	@echo "compile-handlebars - compile the handlebars templates"
 	@echo "lint - check style with jshint"
 
-test: compile-handlebars jasmine-ci
+test: compile-handlebars mocha-ci
 
-test-browser: compile-handlebars jasmine-browser
+test-browser: compile-handlebars
 
-jasmine-ci:
-	jasmine-ci --browser=$(JS_TEST_BROWSER)
-
-jasmine-browser:
-	jasmine
+mocha-ci:
+	mocha-phantomjs index.html
+	
 
 compile-handlebars:
 	handlebars ../volunteer/static/js/shift-grid/templates -f compiled/templates.js
 
 lint:
 	jshint ../volunteer/static/js/shift-grid/
-	jshint spec/javascripts/
+	jshint tests/
