--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "bower": "^1.7.7",
     "jshint": "^2.9.1",
-    "mocha-phantomjs": "^4.0.2",
-    "moment": "^2.11.2"
+    "mocha-phantomjs": "^4.0.2"
   },
   "devDependencies": {},
   "scripts": {
