--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,12 @@ exclude= **/tests/*,**/migrations/*,.tox/*,tmp/*
 basepython=python2.7
 commands=
     env
+    npm install
+    bower install
     py.test
 whitelist_externals=
+    npm
+    bower
     env
 setenv=
     DJANGO_SETTINGS_MODULE=volunteer.settings
@@ -63,9 +67,9 @@ whitelist_externals=
     make
     bower
 commands=
-    npm install -g handlebars
-    npm install -g bower
-    npm install -g mocha
-    npm install -g mocha-phantomjs
-    bower install {toxinidir}/bower.json
+    npm install handlebars
+    npm install bower
+    npm install mocha
+    npm install mocha-phantomjs
+    cd {toxinidir} && bower install
     make test
