--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands=
     env
     npm install
     bower install
-    py.test
+    py.test tests/
 whitelist_externals=
     npm
     bower
@@ -66,6 +66,7 @@ whitelist_externals=
     npm
     make
     bower
+    cd
 commands=
     npm install handlebars
     npm install bower
