--- a/tox.ini
+++ b/tox.ini
@@ -60,17 +60,15 @@ commands=
 
 [testenv:mocha]
 basepython=python2.7
-changedir={toxinidir}/js_tests
 deps=
 whitelist_externals=
     npm
     make
     bower
-    cd
 commands=
     npm install handlebars
     npm install bower
     npm install mocha
     npm install mocha-phantomjs
-    cd {toxinidir} && bower install
-    make test
+    bower install
+    make js-test
