--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "test": "tests"
   },
   "dependencies": {
-    "bower": "^1.7.7",
-    "jshint": "^2.9.1",
-    "mocha-phantomjs": "^4.0.2"
+    "bower": "^1.7.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha-phantomjs": "^4.0.2",
+    "jshint": "^2.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "bower install"
